# samples_code

./: .gitignore  README.md
AV/ADTS/: main.cpp
FFmpeg/: CMakeLists.txt
FFmpeg/Reader/: ffmpeg_reader_impl.h
FFmpeg/include/libavutil/: ffversion.h
FFmpeg/install/: ffrw.lib  readerbase.h
FFmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
FFmpeg/lib/RelWithDebInfo/: ffrw.exp  ffrw.lib
FFmpeg/reader/: ffmpeg_reader.h  ffmpeg_reader_impl.cpp  ffmpeg_reader_impl.h
FFmpeg/src/: factory.cc  factory.h  factorybase.h  ffmpeg_reader.h  ffmpeg_reader_impl.cpp  ffmpeg_reader_impl.h  ffmpegreader.h  ffreader.cc  ffreader.h  readerbase.h
FFmpeg/src/reader/: ffmpeg_reader_impl.h
FFmpeg/test/: CMakeLists.txt  test_reader.cpp
OpenGL/: CMakeLists.txt
OpenGL/YUV420P/: Yuv420pRender.cpp  Yuv420pRender.h  main.cpp
OpenGL/include/: shader_parse.hpp
OpenGL/include/glad/: gl.h  wgl.h  wglext.h
OpenGL/lib/: yuv.lib
OpenGL/res/: 1280_720.v210  fbo.yuyv
OpenGL/src/fbo/: CXFbo.h  fbo.cpp  fbo.fs  fbo.h  fbo.vs  main.cpp
OpenGL/src/fbo_pbo/: fbo.cpp  fbo.h  pbo.cpp  pbo.h  test.cpp
OpenGL/src/gl_videos/fbo_pbo/: fbo.cpp  fbo.h  pbo.cpp  pbo.h  test.cpp
OpenGL/src/gl_videos/yuv420p/: I420.fs  I420.vs  main.cpp  shader_parse.hpp  yuv420p_render.cpp  yuv420p_render.h
OpenGL/src/gl_videos/yuv422/: I422.fs  I422.vs  main.cpp  yuv422_render.cpp
OpenGL/src/gl_videos/yuv422_impl/: I422.fs  yuv422_render.cpp  yuv422_render.h
OpenGL/src/tutorials/: CMakeLists.txt
OpenGL/src/tutorials/01buffer_shader_glsl/: applicationclass.cpp  applicationclass.h  cameraclass.cpp  cameraclass.h  color.ps  colorshaderclass.cpp  colorshaderclass.h  inputclass.cpp  inputclass.h  main.cpp  modelclass.cpp  modelclass.h  openglclass.cpp  openglclass.h  systemclass.cpp  systemclass.h
OpenGL/src/wgl_context/: gl_windows.cc  gl_windows.h  test_main.cc  wgl_context.cc  wgl_context.h
OpenGL/src/yuv420p/: I420.fs  I420.vs  main.cpp  yuv420p_render.cpp
OpenGL/src/yuv422/: I422.fs  main.cpp
OpenGL/src/yuv422_impl/: I422.fs
OpenGL/yuv420p/: fragment.shader  main.cpp  shader_parse.hpp  vertex.shader  yuv420p_render.cpp  yuv420p_render.h
OpenGL/yuv422/: yuv422_render.cpp  yuv422_render.h  yuyv_fragment.shader  yuyv_vertex.shader
OpenGL/yuv422_impl/: yuv422_render.cpp  yuv422_render.h
c++/: CMakeLists.txt
c++/circular/: CMakeLists.txt  circularque.h
c++/defer/: defer.h  test_defer.cpp
c++/event/: event.h  test_event.cpp
c++/idiom/copy_and_swap/: CMakeLists.txt  swap_copy.cpp
c++/idiom/returnTypeResolver/: CMakeLists.txt  returnTypeResolver.cpp
c++/shared_ptr/: refcounter.h  shared_ptr.cpp  shared_ptr.h
c++/singleton/: main.cpp  singleton.cpp  singleton.h
c++/std_io_fmt/: CMakeLists.txt  source.cc
c++/task/: task.h  test_task.cpp
