cmake_minimum_required(VERSION 3.16...3.25)

project(ffrw)

set(CMAKE_CXX_STANDARD 17) 
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

file(GLOB SOURCE
"${CMAKE_SOURCE_DIR}/src/${demo}/*.h"
"${CMAKE_SOURCE_DIR}/src/${demo}/*.cc"
    )  

add_compile_options(-g -O0)
#set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_library(${PROJECT_NAME} SHARED ${SOURCE})

set(LIST_PUBLIC_HEADER
${CMAKE_SOURCE_DIR}/src/readerbase.h
${CMAKE_SOURCE_DIR}/src/factorybase.h 
)
set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER  "${LIST_PUBLIC_HEADER}")

target_include_directories(${PROJECT_NAME} PRIVATE SYSTEM ${CMAKE_SOURCE_DIR}/include)
target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/lib)
target_link_libraries(${PROJECT_NAME} PRIVATE avformat avcodec avutil swscale swresample)
target_compile_definitions(${PROJECT_NAME} PRIVATE UNICODE _UNICODE _CRT_SECURE_NO_WARNINGS _CRT_NONSTDC_NO_WARNINGS)

set_target_properties(${PROJECT_NAME} PROPERTIES
ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib
RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin/Release
RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_SOURCE_DIR}/bin/Debug
RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO   ${CMAKE_SOURCE_DIR}/bin
PDB_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/pdb
)

install(TARGETS ${PROJECT_NAME}
CONFIGURATIONS Debug Release RelWithDebInfo MinSizeRel
RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/install
ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/install
LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/install

PUBLIC_HEADER DESTINATION ${CMAKE_SOURCE_DIR}/install 
)

install(FILES $<TARGET_PDB_FILE:${PROJECT_NAME}> DESTINATION ${CMAKE_SOURCE_DIR}/install OPTIONAL)

add_subdirectory(test)


